# UMinho

./: README.md
2ano/: README.md
2ano/CP/: BChain.hs  BMP.hs  CP.hs  Makefile  Probability.hs  cp1718t.lhs  cp1718t.out
2ano/POO/javaFatura/: CAE.java  Colectivo.ctxt  Contribuinte.java  ContribuinteNaoExistenteException.ctxt  FaturaDataComparator.java  FaturaNIFComparator.ctxt  FaturaValorComparator.ctxt  FaturaValorComparator.java  GestaoFaturas.java  Individual.java  MenuAdmin.ctxt  MenuColectivo.ctxt  MenuIndividual.java  ParValorComparator.ctxt  Saude.ctxt  grupo.txt  package.bluej
2º ano/: README.md
2º ano/CP/: cp1718t.tex
2º ano/POO/javaFatura/: Admin.java  Autenticavel.ctxt  CAE.ctxt  Colectivo.java  Contribuinte.ctxt  ContribuinteNaoExistenteException.java  DespesasFamiliares.java  Educacao.ctxt  FamiliaNumerosa.java  Fatura.ctxt  FaturaInexistenteException.ctxt  FaturaInexistenteException.java  FaturaNIFComparator.java  GestaoFaturas.ctxt  Habitacao.ctxt  Imposto.java  Main.ctxt  MenuAdmin.java  MenuColectivo.java  Restauracao.ctxt  Restauracao.java
3ano/: README.md
3ano/BD/Trabalho/: Conceptual.brM3
3ano/MDIO/: gauss.hs
3ano/MDIO/TP2/: TP2.txt
3º ano/MDIO/TP2/: RelaxOutput_p2.txt  TP2.lp  Tp2_p2.txt
3º ano/MDIO/TP3/: Parte1.lp  Parte2.lp
4ano/AA/GMSWeb/: nb-configuration.xml  pom.xml
4ano/ABD/TP/: README.md  last_config.txt  usefulcommands.txt
4ano/ATS/Tarefa 1/: README.md
4ano/ATS/Tarefa 2/: README.md
4ano/ATS/Tarefa 3/: Generator.hs  README.md
4ano/ATS/Tarefa 4/: README.md  output-23-AR.J  output-88-AR.J  output-88-BR.J
4ano/ArqC/Model/: lights-v2.xml  lights.xml
4ano/ArqC/TSP/: ABCDEFA.dot  ABFEDCA.dot  ACDEBFA.dot  ACDEFBA.dot  AFEDCBA.dot  (+2 more)
4º ano/: README.md
4º ano/ATS/: README.md
ABD/: docker_postgres_cmds
ABD/data/: postgresql.conf
BD/Trabalho/: README.md  qwe.rar
CG/F1/: CMakeCache.txt  Makefile  class5  cmake_install.cmake  main.cpp
CG/Sistema Solar/F3/CG_3ra_fase/Engine/src/: CMakeLists.txt  Makefile  cmake_install.cmake  engine.cpp  parser.cpp
CP/: List.hs  Nat.hs  README 2.md  README.md  cp1718t.aux  cp1718t.idx  cp1718t.ptb  cp1718t.sty  x.tex
DSS/ConfiguraFacil/: README.md
EM/Playground/: addressbook-v1.ele  addressbook-v2.ele
LI3/projC/: Makefile
MDIO/TP1/: TP1.lp
MDIO/TP2/: .Fluxo de Redes .pdf.icloud  RelaxOutput.txt
MDIO/TP3/: Fluxo.lp  Parte0.lp
MEIO/src/: run
POO/javaFatura/: Admin.ctxt  Autenticavel.java  DespesasFamiliares.ctxt  Educacao.java  EmpresaInterior.ctxt  EmpresaInterior.java  FamiliaNumerosa.ctxt  Fatura.java  FaturaDataComparator.ctxt  Habitacao.java  Imposto.ctxt  Individual.ctxt  JavaFatura.txt  Main.java  MenuIndividual.ctxt  MenuInicial.ctxt  MenuInicial.java  Par.ctxt  Par.java  ParValorComparator.java  Saude.java  Scanners.ctxt  Scanners.java  SemDeducao.ctxt  SemDeducao.java
SD/SoundCloud/: .gitignore
SDB/Prática/: Vagrantfile
arq-cal/TSP/: AFBEDCA.dot  DurationMonad.hs  Problem2.hs  Problem3.hs  graph.txt
(+2915 files in other folders)
